--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-
+    <meta name="google-site-verification" content="j9MpPd23ULNfwCG-hiPwp1wX72ax7C4GE3KJWxSprnU" />
 {% seo %}
     {% include head-custom.html %}
   </head>
