--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,11 @@
 
   <head>
     <meta name="google-site-verification" content="j9MpPd23ULNfwCG-hiPwp1wX72ax7C4GE3KJWxSprnU" />
+    google-site-verification: google79d093eb3d8e0cd9.html
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,maximum-scale=2">
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
 
   <body>
